--- a/HTML Docs/Assigment 1.html
+++ b/HTML Docs/Assigment 1.html
@@ -11,5 +11,6 @@
 	<h1>Diffraction</h1>
 	<blockquote><p>Is caused by different wavelengths traveling different speeds through a medium</p><blockquote>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/9YffrCViTVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<p><font color="Red" face="Calibri" size="6"><i><u>Red is red is dead</i></u></font>
 	</body>
 </html>
