--- a/HTML Docs/Assigment 1.html
+++ b/HTML Docs/Assigment 1.html
@@ -5,12 +5,28 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-	<a href="https://www.youtube.com/watch?v=U9DyHthJ6LA">VIDEO</a>
-	<a href="file:///C:/Users/Andrew%20Smith/Desktop/HTML%20Docs/Assigment%201.html">HOME</a>
-	<a href="file:///C:/Users/Andrew%20Smith/Desktop/HTML%20Docs/Prism%20Image.html">IMAGE</a>
+	<a href="https://www.youtube.com/watch?v=U9DyHthJ6LA" target="_blank">VIDEO</a>
+	<a href="Assigment 1.html">HOME</a>
+	<a href="https://en.wikipedia.org/wiki/Wave_interference#/media/File:Wavepanel.png">IMAGE</a>
+		<p>Time is <time>9:00</time></p>
+	<article>
 	<h1>Diffraction</h1>
-	<blockquote><p>Is caused by different wavelengths traveling different speeds through a medium</p><blockquote>
+	<blockquote><p><em>Is caused by different wavelengths traveling different speeds through a medium</em></p><blockquote>
+	</article>
+	<div>
+		<div>
+		<article>
+		<h2>Youtube</h2>
+			<p>This Youtube video has nothing to do with diffraction.</p>
+		</article>
+		</div>
+	</div>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/9YffrCViTVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<p><font color="Red" face="Calibri" size="6"><i><u>Red is red is dead</i></u></font>
+	<details>
+  <summary>Copyright 1999-2018.</summary>
+  <p> - by Refsnes Data. All Rights Reserved.</p>
+  <p>All content and graphics on this web site are the property of the company Refsnes Data.</p>
+</details>
 	</body>
 </html>
