--- a/bootsrtap4_project/acdemy_cinemas.html
+++ b/bootsrtap4_project/acdemy_cinemas.html
@@ -47,68 +47,12 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-
-        <div class="row my-5 text-center">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="./Img/ghostintheshell.jpg" alt="Card image cap">
-                <div class="card-block">
-                  <h5 class="card-title">Ghost in the Shell</h5>
-                  <p class="card-text">Is a terrible remake of a great movie.</p>
-                  <br>
-                  <span class="badge badge-pill badge-primary">12:00PM</span>
-                  <span class="badge badge-pill badge-primary">1:30PM</span>
-                  <span class="badge badge-pill badge-primary">3:00PM</span>
-                  <span class="badge badge-pill badge-primary">5:30PM</span>
-                  <span class="badge badge-pill badge-primary">7:00PM</span>
-                  <span class="badge badge-pill badge-primary">9:30PM</span>
-                </div>
-                  <div class="card-footer">
-                      <small class="text-muted">Last Updated 3 min ago</small>
-                    </div>
-                </div>
-
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./Img/kongskullisland.jpg" alt="Card image cap">
-            <div class="card-block">
-              <h5 class="card-title">Skull Island</h5>
-              <p class="card-text">Is pretty alright.</p>
-              <br>
-              <span class="badge badge-pill badge-primary">12:00PM</span>
-              <span class="badge badge-pill badge-primary">1:30PM</span>
-              <span class="badge badge-pill badge-primary">3:00PM</span>
-              <span class="badge badge-pill badge-primary">5:30PM</span>
-              <span class="badge badge-pill badge-primary">7:00PM</span>
-              <span class="badge badge-pill badge-primary">9:30PM</span>
-            </div>
-              <div class="card-footer">
-                  <small class="text-muted">Last Updated 3 min ago</small>
-                </div>
-            </div>
-
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./Img/beautyandthebeast.jpg" alt="Card image cap">
-            <div class="card-block">
-              <h5 class="card-title">Beauty and the Beast</h5>
-              <p class="card-text">Is also a terrible remake of a great movie.</p>
-              <br>
-              <span class="badge badge-pill badge-primary">12:00PM</span>
-              <span class="badge badge-pill badge-primary">1:30PM</span>
-              <span class="badge badge-pill badge-primary">3:00PM</span>
-              <span class="badge badge-pill badge-primary">5:30PM</span>
-              <span class="badge badge-pill badge-primary">7:00PM</span>
-              <span class="badge badge-pill badge-primary">9:30PM</span>
-            </div>
-              <div class="card-footer">
-                  <small class="text-muted">Last Updated 3 min ago</small>
-                </div>
-          </div>
-        </div>
-
+		
         <div class="container">
             <div class="row">
               <div class="col-sm">
                 
-                <img class="image-fluid" src="./Img/pdx.webp">
+                <img class="image-fluid" src="./Img/pdx.webp" width="500" height="300">
 
                 </div>
                 <div id="About">
@@ -119,9 +63,9 @@
                 <p>Showing guest great time.</p>
                 <p>Sound good!</p>
                 <p>Seat soft just as morning lamb!</p>
-
             </div>
             </div>
+			
             <div id="Showtimes">
               <div class="col-sm text-center my-5">
 
@@ -143,6 +87,62 @@
             </div>
       </div>
       </div>
+	  
+	     <div class="row my-5 text-center">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./Img/ghostintheshell.jpg" alt="Card image cap" height="200" width="100">
+                <div class="card-block">
+                  <h5 class="card-title">Ghost in the Shell</h5>
+                  <p class="card-text">Is a terrible remake of a great movie.</p>
+                  <br>
+                  <span class="badge badge-pill badge-primary">12:00PM</span>
+                  <span class="badge badge-pill badge-primary">1:30PM</span>
+                  <span class="badge badge-pill badge-primary">3:00PM</span>
+                  <span class="badge badge-pill badge-primary">5:30PM</span>
+                  <span class="badge badge-pill badge-primary">7:00PM</span>
+                  <span class="badge badge-pill badge-primary">9:30PM</span>
+                </div>
+                  <div class="card-footer">
+                      <small class="text-muted">Last Updated 3 min ago</small>
+                    </div>
+                </div>
+
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="./Img/kongskullisland.jpg" alt="Card image cap" height="200" width="100">
+            <div class="card-block">
+              <h5 class="card-title">Skull Island</h5>
+              <p class="card-text">Is pretty alright.</p>
+              <br>
+              <span class="badge badge-pill badge-primary">12:00PM</span>
+              <span class="badge badge-pill badge-primary">1:30PM</span>
+              <span class="badge badge-pill badge-primary">3:00PM</span>
+              <span class="badge badge-pill badge-primary">5:30PM</span>
+              <span class="badge badge-pill badge-primary">7:00PM</span>
+              <span class="badge badge-pill badge-primary">9:30PM</span>
+            </div>
+              <div class="card-footer">
+                  <small class="text-muted">Last Updated 3 min ago</small>
+                </div>
+            </div>
+
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="./Img/beautyandthebeast.jpg" alt="Card image cap" height="200" width="100">
+            <div class="card-block">
+              <h5 class="card-title">Beauty and the Beast</h5>
+              <p class="card-text">Also a terrible remake of a great movie.</p>
+              <br>
+              <span class="badge badge-pill badge-primary">12:00PM</span>
+              <span class="badge badge-pill badge-primary">1:30PM</span>
+              <span class="badge badge-pill badge-primary">3:00PM</span>
+              <span class="badge badge-pill badge-primary">5:30PM</span>
+              <span class="badge badge-pill badge-primary">7:00PM</span>
+              <span class="badge badge-pill badge-primary">9:30PM</span>
+            </div>
+              <div class="card-footer">
+                  <small class="text-muted">Last Updated 3 min ago</small>
+                </div>
+          </div>
+        </div>
 
       <div class="jumbotron jumbotron-fluid bg-info text-center">
         <div class="container">
@@ -231,6 +231,9 @@
           </u1>
       </div>
 
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
